added expense & board rates

--- a/index.html
+++ b/index.html
@@ -196,8 +196,64 @@ fetch("https://nominatim.openstreetmap.org/search?q=" +document.getElementById("
 
 
   </script>
+ <style>
 
-  
+
+</style>
+<table >
+  <thead>
+    <tr>
+      <th scope="col">Zone
+      </th>
+      <th scope="col">Rate
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Zone 1
+      </td>
+      <td>Free
+      </td>
+    </tr>
+    <tr>
+      <td>Zone 2
+      </td>
+      <td>$3.50
+      </td>
+    </tr>
+    <tr>
+      <td>Zone 3
+      </td>
+      <td>$5.00
+      </td>
+    </tr>
+    <tr>
+      <td>Zone 4
+      </td>
+      <td>$7.00
+      </td>
+    </tr>
+    <tr>
+      <td>Zone 1-J
+      </td>
+      <td>Free
+      </td>
+    </tr>
+    <tr>
+      <td>Zone 2-J
+      </td>
+      <td>$7.00
+      </td>
+    </tr>
+    <tr>
+      <td>Outside of Zones
+      </td>
+      <td>$2.60/hr, up to $20.80/day
+      </td>
+    </tr>
+  </tbody>
+</table>
 </body>
 
 </html>
